css/main.css
/* ... */
#proff {
    position:relative;
}

#proff::before,
#proff::after {
    content:attr(data-text);
    position:absolute;
    left:-2px;
    top:0;
    color:var(--highlight);
    background:var(--background);
    overflow:hidden;
    clip:rect(0, 900px, 0, 0);
    opacity:0;
}

#proff::before {
    text-shadow:1px 0 var(--accent-one);
    animation: noise-anim-2 3s infinite linear alternate-reverse;
}

#proff::after {
    text-shadow:-1px 0 var(--header);
    animation:noise-anim 2s infinite linear alternate-reverse;
}

#proff:hover::before,
#proff:hover::after {
    opacity:1;
}

.iso {
    margin:3em 0;
}

.iso ul {
    display:block;
    padding:0;
    overflow:hidden;
    list-style-type:none;
    text-transform:uppercase;
    position:relative;
    font:300 1.2em/200% "Oxygen",sans-serif;
}

.iso ul li {
    /* display:block; */
    /* float:left; */
    display:inline-block;
    margin-right:2em;
}

.iso ul li:last-child {
    margin-right:0;
}

.iso ul li a {
    display:block;
}

.iso ul li a * {
    display:inline-block;
    vertical-align:middle;
}

.iso ul li a span {
    border-bottom:10px solid transparent;
    line-height:100%;
}

.iso ul li a i[class*="ph"] {
    font-size:1em;
    margin-left:0.1em;
    border-bottom:10px solid transparent;
}

.iso ul.exclusive li a.selected {
    color:var(--header);
    font-weight:bold;
}

.iso ul.exclusive li a.selected span {
    border-bottom-color:var(--accent-two);
}

.iso ul:not(.exclusive) li a.selected {
    color:var(--highlight);
    font-weight:bold;
}

/* grid */

.grid {
    margin:0 -0.5rem;
}

.grid .item {
    aspect-ratio:1;
    display:flex;
    align-content:center;
    padding:1.5em;
    width:16rem;
    margin:0.5rem;
	box-sizing:border-box;
	position:relative;
	border:1px solid transparent;
	transition:0.4s ease-in-out,
        width 0s linear,
        height 0s linear,
        padding 0s linear;
	flex-wrap:wrap;
    flex-direction:column;
    @supports not (aspect-ratio: auto) { 
        padding-top:100%;
        height:0;
        position:relative;
        overflow:hidden;
    }
}

.main-carousel {
    aspect-ratio:1;
    margin:-1.5em;
    width:calc(100% + 3em);
    @supports not (aspect-ratio: auto) { 
        padding-top:100%;
        height:0;
        position:relative;
        overflow:hidden;
    }
}

.main-carousel img {
    width:100%;
    aspect-ratio:1;
    @supports not (aspect-ratio: auto) { 
        padding-top:100%;
        height:0;
        position:relative;
        overflow:hidden;
    }
}

.flickity-page-dots {
    bottom:1em;
}

.flickity-page-dots .dot {
    background:var(--background);
    opacity:0.5;
}

.flickity-page-dots .dot:hover {
    background:var(--menu);
}

.flickity-page-dots .dot.is-selected {
    background:var(--highlight);
    opacity:1;
}

.grid .item:not(.expand):not(.inactive){
    cursor:pointer;
}

.grid .item > *:not(.main-carousel) {
	width:100%;
}

.grid .item h3,
.grid .item h4 {
	position:absolute;
	right:0.5em;
	left:0.5em;
	margin:0;
	line-height:150%;
	color:var(--accent-text);
	font-weight:normal;
}

.grid .item h3 {
	bottom:0.5em;
	font-size:1.4em;
    text-transform:capitalize;
	font-family:"Oxygen",sans-serif;
	text-align:right;
}

.grid .item h4 {
	top:0.5em;
	left:1em;
	text-align:left;
	font-size:0.8em;
	letter-spacing:0.1em;
	text-transform:uppercase;
}

.item h3 span {
	font-family:"Oxygen",sans-serif;
	text-transform:uppercase;
	font-size:0.5em;
	display:block;
	letter-spacing:0.1em;
	line-height:100%;
	margin:0.5em 0;
	font-weight:300;
	transition:0.4s ease-in-out;
}

.item:not(.expand) h3 span {
    display:none;
}

.one {
	background:var(--accent-one);
}

.two {
	background:var(--accent-three);
}

.two.item h3,
.two.item h4 {
    color:var(--accent-text);
}

.item.one.alt,
.item.two.alt,
.item.one.expand,
.item.two.expand {
	background:var(--transparency);
    backdrop-filter:blur(5px);
    -webkit-backdrop-filter:blur(5px);
}

.item.one.alt {
	border-color:var(--accent-one);
}

.item.one.alt h3,
.item.one.alt h4 {
	color:var(--accent-one);
}

.item.two.alt {
	border-color:var(--accent-three);
}

.item.two.alt h3,
.item.two.alt h4 {
	color:var(--accent-three);
}

.one.expand {
	border-color:var(--accent-one);
}

.one.expand h3, .one.expand.alt h3,
.one.expand h4, .one.expand.alt h4 {
    color:var(--header);
}

.two.expand {
	border-color:var(--accent-three);
}

.two.expand h3, .two.expand.alt h3,
.two.expand h4, .two.expand.alt h4 {
    color:var(--header);
}

.front img {
    display:block;
}

.item:not(.expand) .front img,
.front .overlay {
    position:absolute;
    left:0;
    right:0;
    bottom:0;
    top:0;
    width:100%;
    height:100%; 
}

.expand:not(.big) .front img,
.expand .front .overlay {
    display:none;
}

.item:not(.expand) .front img,
.main-carousel img {
    object-fit:cover;
    z-index:-2;
    -webkit-filter:grayscale(100%);
    filter:grayscale(100%);
}

.big.expand .front img {
    width:calc(100% + 6rem);
    margin:calc(25px - 3rem) -3rem calc(25px - 1em);
    max-height:12rem;
    object-fit:cover;
    border-bottom:1px solid;
    -webkit-filter:grayscale(0%);
    filter:grayscale(0%);
}

.one.big.expand .front img {
    border-bottom-color:var(--accent-one);
}

.two.big.expand .front img {
    border-bottom-color:var(--accent-three);
}

.big.expand .front img.t {
    object-position:top;
}

.front .overlay {
    z-index:-1;
}

.item:not(.inactive) .front .overlay {
    -webkit-backdrop-filter:blur(2px);
    backdrop-filter:blur(2px);
}

.one .overlay {
    background:linear-gradient(to bottom,rgba(255,255,255,0),var(--accent-one));
}

.one.alt:not(.expand) .overlay ~ h3 {
    color:var(--accent-text);
    /* text-shadow:2px 2px 2px var(--accent-one); */
}

.two .overlay {
    background:linear-gradient(to bottom,rgba(255,255,255,0),var(--accent-three));
}

.two.alt:not(.expand) .overlay ~ h3 {
    color:var(--accent-text);
    /* text-shadow:2px 2px 2px var(--accent-three); */
}
/* ... */

